syntax = "proto3";
option java_multiple_files = true;
package com.orange.pocs.grpc.product.grpc.service;
import "google/protobuf/wrappers.proto";

message ProductId {
    string value = 1;
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

service ProductService {
    rpc addProduct(Product) returns (ProductId);
    rpc getProduct(ProductId) returns (Product);
}